# llama

./: .gitignore  CMakeLists.txt  Makefile  Package.swift  README-qnn.md  README.md  build.zig  convert-hf-to-gguf-update.py  convert-hf-to-gguf.py  convert.py  convert_llama_ggml_to_gguf.py  flake.nix  ggml-alloc.c  ggml-backend.c  ggml-backend.h  ggml-cann.cpp  ggml-cann.h  ggml-common.h  ggml-cuda.cu  ggml-impl.h  ggml-kompute.cpp  ggml-qnn.cpp  ggml-qnn.h  ggml-quants.c  ggml-quants.h  ggml-rpc.cpp  ggml-sycl.bak  ggml-sycl.cpp  ggml-sycl.h  ggml.c  ggml.h  llama.cpp  llama.h  pyproject.toml  requirements.txt  sgemm.cpp  sgemm.h  unicode.cpp  unicode.h
.devops/nix/: package.nix  python-scripts.nix  scope.nix
.github/: labeler.yml
ci/: run.sh
common/: common.cpp  common.h  grammar-parser.cpp  sampling.cpp  sampling.h  train.cpp
examples/: CMakeLists.txt
examples/baby-llama/: baby-llama.cpp
examples/embedding/: embedding.cpp
examples/gritlm/: gritlm.cpp
examples/llama-bench/: llama-bench.cpp
examples/llava/: clip.cpp  llava.cpp
examples/lookahead/: lookahead.cpp
examples/lookup/: lookup.cpp
examples/main/: README.md  main.cpp
examples/openai/: __main__.py
examples/perplexity/: perplexity.cpp
examples/quantize/: quantize.cpp
examples/retrieval/: retrieval.cpp
examples/server/: README.md  server.cpp
examples/server/public/: index.html
examples/server/tests/features/steps/: steps.py
ggml-cann/: acl_ops.cpp  acl_ops.h  acl_tensor.cpp  acl_tensor.h  aclnn_ops.cpp  aclnn_ops.h  bcast.cpp  bcast.h  common.h
ggml-cann/kernels/: CMakeLists.txt  ascendc_kernels.cpp  ascendc_kernels.h  dequantize_q4_0.cpp  dequantize_q4_0.h  dup.cpp  get_row_f16.cpp  get_row_f32.cpp  get_row_q4_0.cpp  get_row_q8_0.cpp  get_row_q8_0.h  quantize_f16_q8_0.cpp  quantize_f32_q8_0.cpp  quantize_q4_0.cpp  quantize_q4_0.h  quantize_q8_0.cpp  rope.cpp  rope.h  rope_init_cache.cpp
ggml-cuda/: fattn-common.cuh  fattn-tile-f16.cu  fattn-vec-f16.cu  fattn-vec-f32.cu
ggml-sycl/: backend.hpp  common.cpp  common.hpp  convert.cpp  convert.hpp  dequantize.hpp  dmmv.cpp  dmmv.hpp  mmq.cpp  mmq.hpp  mmvq.cpp  mmvq.hpp  pool.hpp  presets.hpp  vecdotq.hpp
ggml-sycl/dpct/: helper.cpp  helper.hpp
gguf-py/: pyproject.toml
gguf-py/gguf/: constants.py  gguf_reader.py  gguf_writer.py  tensor_mapping.py  utility.py
gguf-py/tests/: test_gguf.py
scripts/: check-requirements.sh
tests/: CMakeLists.txt  test-backend-ops.cpp  test-chat-template.cpp
tests/ggml-qnn/: .gitignore  CMakeLists.txt  build-ggml-qnn.sh  run-ggml-qnn.sh
